welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:2: error: '=' expected but 'def' found.
override def run() def marquer(){
                   ^PictureMono2:6: error: illegal start of simple expression
def faireV(){
^PictureMono2:28: error: Unmatched closing brace '}' ignored here
}
^